# Evaluating-RAG-systems

./: .gitignore  .rag_cache.json  README.md  _  agents.py  api.py  batch_download_pdfs.py  evaluate.py  evaluate_batch.py  evaluate_multi_agent.py  naive_rag.py  prepare_eval.py  qasper_paper_1.txt  requirements.txt  save_paper.py  scores_evaluations.md  script_opt.py  txt_to_pdf.py
lancedb/pdf_chunks.lance/_transactions/: 0-16d4bcdc-f3ee-49b0-a3c5-c9627f10b65d.txn
lancedb/pdf_chunks.lance/_versions/: 1.manifest
lancedb/pdf_chunks.lance/data/: 491510cc-3907-4a56-9e02-59d8f164ca2d.lance
rag_rust/: Cargo.toml  pyproject.toml
rag_rust/src/: lib.rs
